# flam

./: AndroidManifest.xml  LICENSE  MainActivity.java  README.md  WebSocketServer.java  build.gradle  settings.gradle.kts
app/: LICENSE  build.gradle.kts
app/src/androidTest/java/com/example/flam/: ExampleInstrumentedTest.kt
app/src/cpp/: CMakeLists.txt  EdgeProcessor.cpp  native-lib.cpp
app/src/main/: AndroidManifest.xml
app/src/main/java/com/: AndroidManifest.xml  CameraFrameProcessor.java  EdgeDetectionWebSocketServer.java  MainActivity.java  NativeProcessor.java  activity_main.xml
app/src/main/java/com/example/flam/: MainActivity.kt
app/src/main/java/com/example/flam/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/gl/: GLRenderer.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/flam/: ExampleUnitTest.kt
gl/: GLRenderer.java
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt  EdgeProcessor.h
web/: package-lock.json  package.json  tsconfig.json  vite.config.js
web/src/: app.ts  index.html
